@@ -13,6 +13,7 @@
 package org.ejbca.core.model.ra.raadmin;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
@@ -112,10 +113,10 @@ public final class EndEntityValidationHelper {
         }
         
         try {
-            final EndEntityFieldValidator instance = (EndEntityFieldValidator)klass.newInstance();
+            final EndEntityFieldValidator instance = (EndEntityFieldValidator) klass.getDeclaredConstructor().newInstance();
             validatorCache.put(className, instance);
             return instance;
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
             log.warn("Failed to instantiate end entity validation class " + className, e);
             nonExistentValidatorsCache.add(className);
             return null;
